Fixing button text not being centered on ios

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -35,12 +35,12 @@ header{
     z-index: 99;
 } 
 
-[data-aos] {
-    pointer-events: none;
-    &.aos-animate {
-        pointer-events: auto;
-    }
-}
+// [data-aos] {
+//     pointer-events: none;
+//     &.aos-animate {
+//         pointer-events: auto;
+//     }
+// }
 
 .divider-line{
     width: 40%;
@@ -108,6 +108,11 @@ header{
     border-style: solid;
     border-radius: 0.7rem;
     cursor: pointer;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .contact:active {
@@ -478,6 +483,11 @@ header{
     border-width: 5px;
     font-size: 1.5rem;
     cursor: pointer;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .linkedin-button-container{
